--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,26 +4,24 @@
     package="com.example.waterdeliveryapp">
 
     <application
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/delivery"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/delivery"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
-        <activity
-            android:theme="@style/AddToOrderTheme"
-            android:name=".AddToOrderActivity"
-            android:label="">
-
-        </activity>
         <activity
             android:name=".BasketActivity"
             android:label="@string/basket_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:theme="@style/AddToOrderTheme"
+            android:name=".AddToOrderActivity"
+            android:label="">
         </activity>
     </application>
 
